force-app/websites/me/objects/Portfolio_Config__mdt/Portfolio_Config__mdt.object-meta.xml
<CustomObject>
    <description
  >Singleton site configuration (use the "Default" record).</description>
    <label>Portfolio Config</label>
    <pluralLabel>Portfolio Configs</pluralLabel>
</CustomObject>