force-app/websites/me/objects/Portfolio_Config__mdt/fields/About__c.field-meta.xml
<CustomField>
    <fullName>About__c</fullName>
    <label>About</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>