force-app/websites/me/objects/Portfolio_Config__mdt/fields/Availability_Message__c.field-meta.xml
<CustomField>
    <fullName>Availability_Message__c</fullName>
    <label>Availability Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>