force-app/websites/me/objects/Portfolio_Config__mdt/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>