force-app/websites/me/objects/Portfolio_Config__mdt/fields/Instagram_URL__c.field-meta.xml
<CustomField>
    <fullName>Instagram_URL__c</fullName>
    <label>Instagram URL</label>
    <type>Url</type>
</CustomField>