force-app/websites/me/objects/Portfolio_Config__mdt/fields/Intro__c.field-meta.xml
<CustomField>
    <fullName>Intro__c</fullName>
    <label>Intro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>