force-app/websites/me/objects/Portfolio_Config__mdt/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <label>Notification Email</label>
    <description
  >Where contact-form submissions are emailed. Separate from the public Email shown on the site.</description>
    <type>Email</type>
</CustomField>