force-app/websites/me/objects/Portfolio_Config__mdt/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <label>Photo URL</label>
    <type>Url</type>
</CustomField>