force-app/websites/me/objects/Portfolio_Config__mdt/fields/Resume_URL__c.field-meta.xml
<CustomField>
    <fullName>Resume_URL__c</fullName>
    <label>Resume URL</label>
    <type>Url</type>
</CustomField>