force-app/websites/me/objects/Portfolio_Config__mdt/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <description
  >Pipe-separated roles shown as a rotating line in the hero, e.g. "Software Engineer|DevOps Engineer|Senior Salesforce Technical Consultant".</description>
    <type>Text</type>
    <length>255</length>
</CustomField>