force-app/websites/me/objects/Portfolio_Config__mdt/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <label>Tagline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>