force-app/websites/me/objects/Portfolio_Config__mdt/fields/Tech_List__c.field-meta.xml
<CustomField>
    <fullName>Tech_List__c</fullName>
    <label>Tech List</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>