force-app/websites/me/objects/Portfolio_Config__mdt/fields/Twitter_URL__c.field-meta.xml
<CustomField>
    <fullName>Twitter_URL__c</fullName>
    <label>Twitter URL</label>
    <type>Url</type>
</CustomField>